# llm-lv1

./: .gitignore  CMakeLists.txt  LEARNING_GUIDE.md  README.md
cpp_examples/: demo_showcase.cpp  simple_inference.cpp  streaming_example.cpp
cpp_include/core/: config.hpp  engine.hpp  state.hpp
cpp_include/kernel/: attention.hpp
cpp_include/runtime/: memory_manager.hpp
cpp_src/core/: config.cpp  engine.cpp  state.cpp  tokenizer.cpp
cpp_src/kernel/: activation.cpp  attention.cpp  normalization.cpp
cpp_src/model/: model_loader.cpp  model_registry.cpp
cpp_src/runtime/: context.cpp  memory_manager.cpp  scheduler.cpp
cpp_src/utils/: logging.cpp  math_utils.cpp
cpp_tests/: test_all.cpp  test_attention.cpp  test_engine.cpp  test_memory_manager.cpp  test_scheduler.cpp
docs/tutorial/: INDEX.md  LEARNING_PATH.md
docs/tutorial/01-core/: 01-core-config.md  02-core-engine.md  03-core-state.md  README.md
docs/tutorial/02-kernel/: 01-kernel-attention.md  README.md
docs/tutorial/03-runtime/: 01-runtime-memory-manager.md  README.md
docs/tutorial/04-model/: README.md
docs/tutorial/05-utils/: README.md
docs/tutorial/06-examples/: 01-demo-showcase.md  README.md
scripts/: check_vulnerabilities.sh  find_new_vulnerabilities.sh
